<resources>

    <string name="app_name">Smart Fitness</string>
    <string name="btn_bmical">BMI Calculator</string>
    <string name="btn_wt">Weight Trainers</string>
    <string name="btn_nut">Nutritionists</string>
    <string name="btn_carIn">Cardio Instructors</string>
    <string name="btn_addAdmin">Add an Admin</string>
    <string name="btn_home">Enter</string>
    <string name="tv_home_copyright">MAD project - @SubZero Developers</string>
    <string name="btn_home_logInAsAdmin"><u>Log in as Admin</u></string>
    <string name="Email_hint">Enter E-mail</string>
    <string name="password_hint">Enter Password</string>
    <string name="Login_btn">Login</string>
    <string name="ntr_tab1">CARDIO INSTRUCTORS</string>
    <string name="ntr_tab2">WEIGHT TRAINERS</string>
    <string name="ntr_tab3">NUTRITIONISTS</string>
    <string name="scroll1">Nutritionist Name</string>
    <string name="ntr_district">District</string>
    <string name="ntr_name">Nutritionist Name</string>
    <string name="contDescription1">image_person</string>
    <string name="contDescription2">image_person</string>
    <string name="contDescription3">image_person</string>
    <string name="contDescription4" />
    <string name="image_logo">logo</string>
    <string name="Tabs_1">Cardio instructor</string>
    <string name="Tabs_2">Weight trainers</string>
    <string name="Tabs_3">Nutrition instructor</string>
    <string name="cal">Calculate</string>
    <string name="firstname"> First name</string>
    <string name="lasttname"> Last name</string>
    <string name="city"> City</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="contactnumber"> Mobile number</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="ntr_phone">+94 XXX XXXXXX</string>
    <string name="seaech_name">NAME</string>
    <string name="search_locaion">LOCATION</string>
    <string name="person_image">person_image</string>
    <string name="edit_btn">EDIT</string>
    <string name="add_new">ADD</string>
    <string name="btn_delete">X</string>
    <string name="ntr_details">Other</string>
    <string name="btn_call">CALL</string>
    <string name="btn_save" />
    <string name="ntr_location">Location</string>
    <string name="btn_cancel">Cancel</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="editTextTextPersonName10">Name</string>
    <string name="editTextTextPersonName14">Trainer ID</string>
    <string name="editTextTextPostalAddress">Address</string>
    <string name="editTextPhone">Contact Number</string>
    <string name="editTextTextPersonName12">Working Hours</string>
    <string name="About" />
    <string name="button11">Add Trainer</string>
    <string name="editTextTextPersonName5">Name</string>
    <string name="editTextTextPersonName15">Trainer ID</string>
    <string name="editTextTextPersonName17">Reason</string>
    <string name="button10">DELETE</string>
    <string name="button">Add</string>
    <string name="textView22">Total No.of Trainers:</string>
    <string name="et_name">Name</string>
    <string name="et_Location">Location</string>
    <string name="et_contactNumber">Contact Number</string>
    <string name="et_email">E-mail</string>
    <string name="et_about">About</string>
    <string name="et_editName">Name</string>
    <string name="et_editLocation">Location</string>
    <string name="et_editContactNumber">Contact Number</string>
    <string name="et_editEmail">Email</string>
    <string name="et_editAbout">About</string>
    <string name="btn_editSave">Save</string>
    <string name="btn_editCancel">Cancel</string>
    <string name="err_name">Enter a valid name</string>
    <string name="err_tel">Enter a valid phone number</string>
    <string name="err_email">Enter a valid email</string>
    <string name="pass">Add minimum 1:[Aa-Zz]characters and Symbols</string>
    <string name="loginpass">Enter a valid password</string>

</resources>