<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trainer"
    tools:context=".CustomerWeightTrainer.Customer_View_WeightTrainer_Profile_View">

    <HorizontalScrollView
        android:id="@+id/horizontalMenuBar"
        android:layout_width="408dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_logo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menu_tab1"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#04574F"
                android:text="@string/ntr_tab1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/menu_tab2"
                android:layout_width="136dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="#04574F"
                android:text="@string/ntr_tab2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/menu_tab3"
                android:layout_width="136dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="#04574F"
                android:text="@string/ntr_tab3"
                android:textColor="@color/black"
                android:textColorHint="#050505"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="322dp"
        android:layout_height="474dp"
        android:layout_marginBottom="64dp"
        android:background="@color/custemer_view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="205dp"
            android:layout_height="387dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="50dp">

            <TextView
                android:id="@+id/tv_nut_profileDes"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="236dp"
                android:text="@string/et_about"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_nut_profileName"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="60dp"
                android:text="@string/et_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_nut_profileLocation"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="104dp"
                android:text="@string/et_Location"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_nut_profileNo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="148dp"
                android:text="@string/et_contactNumber"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_nut_profileEmail"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="192dp"
                android:text="@string/et_email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <Button

                android:id="@+id/btn_wt_cv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="0dp"
                android:text="CLOSE"
                app:backgroundTint="#04574F" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="72dp"
            android:layout_height="106dp"
            app:srcCompat="@drawable/trainerlogo" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/profile_logo"
        android:layout_width="102dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>